<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    >
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/result_text"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_result"
        android:fontFamily="@font/ziti"
        android:textAppearance="@style/TextAppearance.YiXian.Headline4"
    >

    </com.google.android.material.textview.MaterialTextView>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_text"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_title"
        android:fontFamily="@font/ziti"
        android:textAppearance="@style/TextAppearance.YiXian.Headline6"
        >

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lv_text"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_score"
        android:fontFamily="@font/ziti"
        android:textAppearance="@style/TextAppearance.YiXian.Body1"
        >

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/kills_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/history_kills"
        android:fontFamily="@font/ziti"
        android:textAppearance="@style/TextAppearance.YiXian.Body1"
        >

    </com.google.android.material.textview.MaterialTextView>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/deaths_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/history_death"
        android:fontFamily="@font/ziti"
        android:textAppearance="@style/TextAppearance.YiXian.Body1"
        >
    </com.google.android.material.textview.MaterialTextView>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/history_time"
        android:fontFamily="@font/ziti"
        android:textAppearance="@style/TextAppearance.YiXian.Body1"
        >
    </com.google.android.material.textview.MaterialTextView>
</LinearLayout>