<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/filter_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <Button
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="200dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/search"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchName_textInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="搜索"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content">
            <com.google.android.material.chip.Chip
                android:id="@+id/physics_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/attribute_attack"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/magic_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/attribute_cure"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/attack_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/attribute_physics"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/cure_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/attribute_magic"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/eternal_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/attribute_eternal"/>
        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>
</HorizontalScrollView>