<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/skillcards_recycle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/group_layout"
        app:layout_constraintTop_toBottomOf="@id/filter_layout"
        app:layout_constraintVertical_weight="6"
        app:spanCount="4"
        tools:itemCount="10"
        tools:listitem="@layout/battle_repository_card_item">


    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/filter_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintVertical_weight="1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/skillcards_recycle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/group_layout"
        app:layout_constraintTop_toTopOf="parent">
        <Button
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/search"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchName_textInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="搜索"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.chip.ChipGroup
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content">
            <com.google.android.material.chip.Chip
                android:id="@+id/physics_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/attribute_attack"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/magic_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/attribute_cure"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/attack_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/attribute_physics"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/cure_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/attribute_magic"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/eternal_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/attribute_eternal"/>
        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/group_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/skillcards_recycle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/battle_repository_group_item"
        >
    </ExpandableListView>


</androidx.constraintlayout.widget.ConstraintLayout>