<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFFFF"
    tools:context=".Frame.PersonalInformation.PersonalProfile_Fragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:background="@drawable/repositorycard_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleAngle="15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/select_group_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/personal_profile_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#983B3B"
            android:fontFamily="@font/ziti"
            android:text="@string/personal_profile"
            android:textColor="#A57D04"
            android:textSize="30sp" />

        <Button
            android:id="@+id/game_history_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/ziti"
            android:background="#983B3B"
            android:text="@string/game_history"
            android:textColor="#A57D04"
            android:textSize="30sp" />

        <Button
            android:id="@+id/personal_signature_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/ziti"
            android:text="@string/personal_signature"
            android:background="#983B3B"
            android:textColor="#A57D04"
            android:textSize="30sp" />
    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/paper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/select_group_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="3" />


</androidx.constraintlayout.widget.ConstraintLayout>